--- a/root/site/header.html
+++ b/root/site/header.html
@@ -113,6 +113,8 @@
     <!-- final css override -->
     <link rel="stylesheet" type="text/css" href="/static/final.css" />
     <link rel="stylesheet" type="text/css" href="/static/sprites.css" />
+    
+    <script type='text/javascript' src='/static/latinise.js'></script>
 
     <!-- Hooks -->
 % for my $include ( _array $c->stash->{header_include} ) {
