editors in headers

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -43,6 +43,9 @@
     <link rel="stylesheet" href="/static/cleditor/jquery.cleditor.css">
     <script type="text/javascript" src="/static/cleditor/jquery.cleditor.min.js"></script>
     
+    <!-- Ace -->
+    <script type="text/javascript" src="/static/ace/ace.js"></script>
+
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/static/codemirror/theme/elegant.css">
@@ -79,6 +82,10 @@
         }
     </style>
 
+    <!-- Editors: Ace, CLEditor, etc. -->
+    <script type="text/javascript" src="/site/editors.js"></script>
+
+    <!--  -->
     <script type="text/javascript" src="/site/explorer.js"></script>
 
     <!-- Portal Stuff -->
