--- a/root/site/header.html
+++ b/root/site/header.html
@@ -44,7 +44,7 @@
     <script type="text/javascript" src="/static/cleditor/jquery.cleditor.min.js"></script>
     
     <!-- Ace -->
-    <!-- <script type="text/javascript" src="/static/ace/ace.js"></script> -->
+    <script type="text/javascript" src="/static/ace/ace.js"></script>
 
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
