modificacion para el control de visualizacion de botones html

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -7,6 +7,8 @@
     $topic_data
     $jobs => 0
     $HTMLbuttons => 0
+    $permissionEdit
+    $permissionComment
 </%args>
 <%perl>
     use Baseliner::Utils;
@@ -83,7 +85,7 @@ padding: 2px 4px 2px 7px;
 <div id="boot" >
 % foreach my $field (  @form ) {
 % if ($field->{html}){
-    <& $field->{html}, data=>$topic_data, meta=>$field, html_buttons=>$HTMLbuttons &>
+    <& $field->{html}, data=>$topic_data, meta=>$field, html_buttons=>$HTMLbuttons, show_buttons=>$permissionEdit, show_comments=>$permissionComment &>
 %}
 % }
 % }else {
