inicializacion de parametros

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -7,8 +7,8 @@
     $topic_data
     $jobs => 0
     $HTMLbuttons => 0
-    $permissionEdit
-    $permissionComment
+    $permissionEdit => 0
+    $permissionComment => 0
 </%args>
 <%perl>
     use Baseliner::Utils;
