--- a/root/site/header.html
+++ b/root/site/header.html
@@ -28,7 +28,7 @@
     <script src="/static/flot/jquery.flot.js"></script>
     <script src="/static/flot/jquery.flot.pie.js"></script>
     <script src="/static/flot/jquery.flot.orderBars.js"></script>
-    <script src="/static/flot/jquery.flot.resize.js"></script>
+    <!-- errors with latest jquery script src="/static/flot/jquery.flot.resize.js"></script -->
     <script src="/static/flot/flot.js"></script>
 
     <!-- The JIT -->
