Fixed some translations

--- a/root/dashlets/jobs.html
+++ b/root/dashlets/jobs.html
@@ -12,15 +12,15 @@ html: /dashlets/jobs.html
 </%perl>
 
     <div>
-        <h2>Pases</h2>
+        <h2><% _loc("Jobs") %></h2>
         <table class="table table-bordered table-condensed dashboard">
             <thead>
                 <tr>
-                    <th>Proyecto</th>
-                    <th>Entorno</th>
-                    <th>Ult. Exito</th>
-                    <th>Ult. Fallo</th>
-                    <th>Ult. Duración</th>
+                    <th><% _loc("Project") %></th>
+                    <th><% _loc("Baseline") %></th>
+                    <th><% _loc("Last success") %></th>
+                    <th><% _loc("Last failure") %></th>
+                    <th><% _loc("Last elapsed") %></th>
                 </tr>
             </thead>
             <tbody>
