--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -15,7 +15,7 @@ html: /dashlets/baselines.html
 </%perl>
 
     <div>
-        <h2>Entornos</h2>
+        <h2><% _loc("Baselines") %></h2>
 %foreach my $entorno (_array @entornos){
         <h4><%$entorno->{bl}%></h4>
         <div class="progress progress-success" style="margin-bottom: 5px;text-align: left">
@@ -25,7 +25,7 @@ html: /dashlets/baselines.html
             <div class="bar" style="width: <%$entorno->{porcentError}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/nook/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));"><%$entorno->{totError}%></div>
         </div>
 %}
-        <div style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>', _('Running jobs'));">Ver en ejecución</a></b></div>
+        <div style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>', _('Running jobs'));"><% _loc("Running jobs") %></a></b></div>
     </div>
 
 
