Some more translations

--- a/root/fields/system/html/field_title.html
+++ b/root/fields/system/html/field_title.html
@@ -12,7 +12,7 @@
 
     <tr>
         <td style="vertical-align: middle">
-            <span class="label" style="background: <% $data->{color_category} %>"><% $data->{name_category} %> #<% $data->{topic_mid} %></span>
+            <span class="label" style="background: <% $data->{color_category} %>"><% _loc($data->{name_category}) %> #<% $data->{topic_mid} %></span>
         </td>
     </tr>
     <tr>
