--- a/root/site/header.html
+++ b/root/site/header.html
@@ -17,7 +17,7 @@
     <!-- script type="text/javascript" src="/static/pdfjs/pdf.min.js"></script -->
 
     <!-- DatePickerPlus - Ext -->
-    <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus.js"></script> 
+    <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus-min.js"></script> 
 % if( length $lang && $lang ne 'en' ) {
     <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus-lang-<% $lang %>.js"></script> 
 % }
