datepicker lang and general ext language

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -18,7 +18,7 @@
 
     <!-- DatePickerPlus - Ext -->
     <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus-min.js"></script> 
-% if( length $lang && $lang ne 'en' ) {
+% if( length $lang && $lang =~ /en|es/ ) {
     <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus-lang-<% $lang %>.js"></script> 
 % }
     <link rel="stylesheet" href="/static/datepickerplus/datepickerplus.css" type="text/css" />
