--- a/root/site/top.html
+++ b/root/site/top.html
@@ -48,7 +48,7 @@
     <script type="text/javascript" src="/static/ext/examples/ux/ux-all<% $debug %>.js"></script>
 
     <!-- <script type="text/javascript" src="/static/ext/build/locale/ext-lang-es-min.js"></script> -->
-    <script type="text/javascript" src="/static/ext/src/locale/ext-lang-es.js"></script>
+    <script type="text/javascript" src="/static/ext/src/locale/ext-lang-<% $c->language %>.js"></script>
 
     <!-- site is the global stylesheet -->
     <link rel="stylesheet" type="text/css" href="/static/site.css" />
