--- a/root/fields/system/html/field_ci_grid.html
+++ b/root/fields/system/html/field_ci_grid.html
@@ -3,6 +3,12 @@
     $data
 </%args>
 
+    <ul class="nav nav-list">
+        <li class="nav-header">
+        <pre>
+            <% _dump($data) %>
+        </li>
+    </ul>
 % if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
@@ -19,3 +25,4 @@
 % }
     </ul>
 % } 
+
