Translated elements in job dashboard

--- a/root/comp/dashboard_job.html
+++ b/root/comp/dashboard_job.html
@@ -155,7 +155,7 @@
 </%perl>                        
                     <tr>
                         <td><b><% _loc( 'Job Items') %></b></td>
-                        <td><b><a href="javascript:Baseliner.addNewTab('/job/log/elements?id_job=<%$idjob%>', _('Elementos <%$namejob%>'), { tab_icon: '/static/images/icons/moredata.gif' } );">Ver elementos&nbsp;<img border=0 src='/static/images/moredata.gif'/></a></b></td>
+                        <td><b><a href="javascript:Baseliner.addNewTab('/job/log/elements?id_job=<%$idjob%>', _('Elementos <%$namejob%>'), { tab_icon: '/static/images/icons/moredata.gif' } );"><% _loc("Items") %>&nbsp;<img border=0 src='/static/images/moredata.gif'/></a></b></td>
                     </tr>
 <%perl>
     my $tot_tecnologias;
