--- a/root/fields/system/html/field_ci_grid.html
+++ b/root/fields/system/html/field_ci_grid.html
@@ -2,11 +2,17 @@
     $meta
     $data
 </%args>
-
+% my $d = $data->{ $meta->{id_field} };
     <ul class="nav nav-list">
         <li class="nav-header">
-        <pre>
-            <% _dump($data) %>
+            <% _loc($meta->{name_field}) %>
+        </li>
+    </ul>
+    <ul class="nav nav-list">
+        <li class="nav-header">
+            <pre>
+                <% $d && @$d ? _dump($d) : '' %>
+            </pre>
         </li>
     </ul>
 % if( _array( $data->{$meta->{id_field}} ) ) {
