--- a/root/fields/system/html/field_ci_grid.html
+++ b/root/fields/system/html/field_ci_grid.html
@@ -3,18 +3,26 @@
     $data
 </%args>
 % my $d = $data->{ $meta->{id_field} };
-    <ul class="nav nav-list">
-        <li class="nav-header">
-            <% _loc($meta->{name_field}) %>
-        </li>
-    </ul>
-    <ul class="nav nav-list">
-        <li class="nav-header">
-            <pre>
-                <% $d && @$d ? _dump($d) : '' %>
-            </pre>
-        </li>
-    </ul>
+    <tr>
+        <th><h5 style="border-bottom: 1px solid #bbb; margin-top: 15px"><% _loc($meta->{name_field}) %>:</h5></th>
+    </tr>
+    <tr>
+      <td style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" >
+          <table class="table table-bordered" style="margin-top: 10px; width: 400px">
+              <tbody>
+% foreach my $ci ( map { _ci($_) } _array( $data->{$meta->{id_field}} ) ) {
+<tr>
+    <td width=32><img src="<% $ci->icon %>" /></td>
+    <td><% $ci->name %></td>
+    <td><% $ci->collection %></td>
+</tr>
+% }
+              </tbody>
+          </table>
+      </td>
+    </tr>
+    
+<%doc>
 % if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
@@ -32,3 +40,4 @@
     </ul>
 % } 
 
+</%doc>
