Changed topics dashlet title

--- a/root/dashlets/topics.html
+++ b/root/dashlets/topics.html
@@ -12,11 +12,11 @@ html: /dashlets/topics.html
 </%perl>
 
     <div>
-        <h2><% 'Incidencias' %></h2>
+        <h2><% _loc('Topics') %></h2>
         <table class="table table-bordered table-condensed dashboard">
             <thead>
                 <tr>
-                    <th colspan="3">Título</th>
+                    <th colspan="3"><% _loc('Title') %></th>
                     <th><% _loc('Status') %></th>            
                     <th>Creada</th>
                 </tr>
