Change in click category

--- a/root/dashlets/topics_open_by_category_pie.html
+++ b/root/dashlets/topics_open_by_category_pie.html
@@ -64,6 +64,7 @@ function pieHover(event, pos, obj)
 
 function pieClick(event, pos, obj) 
 {
+    //Click on category
 	if (!obj)
                 return;
 	var title_category = '<div id="boot" style="background:transparent;height:14px"><span class="label" style="background-color:' + obj.series.color  + '">' + obj.series.label + '</span></div>';			
