--- a/features/bde/root/email/ldif_load_error.html
+++ b/features/bde/root/email/ldif_load_error.html
@@ -4,6 +4,7 @@
   $url
 </%args>
 
+<!--:int_asi -->
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
