--- a/root/site/header.html
+++ b/root/site/header.html
@@ -61,6 +61,7 @@
     <script type="text/javascript" src="/static/codemirror/mode/javascript/javascript.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/xml/xml.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/plsql/plsql.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/css/css.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/markdown/markdown.js"></script>
     <style type="text/css">
         .CodeMirror { border: 1px solid #eee;} 
