pagedown fieldlet, but save not working yet

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -40,6 +40,12 @@
     <script language="javascript" src="/static/jsgantt.js"></script>
     -->
 
+    <!-- Pagedown -->
+    <link rel="stylesheet" href="/static/pagedown/pagedown.css">
+    <script type="text/javascript" src="/static/pagedown/Markdown.Converter.js"></script>
+    <script type="text/javascript" src="/static/pagedown/Markdown.Sanitizer.js"></script>
+    <script type="text/javascript" src="/static/pagedown/Markdown.Editor.js"></script>
+    
     <!-- CLEditor -->
     <link rel="stylesheet" href="/static/cleditor/jquery.cleditor.css">
     <script type="text/javascript" src="/static/cleditor/jquery.cleditor.min.js"></script>
