--- a/root/fields/system/html/field_title.html
+++ b/root/fields/system/html/field_title.html
@@ -17,7 +17,7 @@
     </tr>
     <tr>
         <td colspan='2'>
-            <h3><% eval('$data->{' . $meta->{bd_field} . '}') %></h3>
+            <h3><% $data->{ $meta->{bd_field} } %></h3>
         </td>    
     </tr>
     <tr >
