--- a/root/site/top.html
+++ b/root/site/top.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" type="text/css" href="/static/ext/resources/css/ext-all.css" />
 
     <script type="text/javascript" src="/site/stacktrace.js"></script>
+    <script type="text/javascript" src="/static/ext/adapter/ext/ext-base<% $debug %>.js"></script>
 
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
