comments is now discussion

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -148,7 +148,7 @@ padding: 2px 4px 2px 7px;
     <br><br>
     <ul class="nav nav-tabs">
         <li <% $tabactive[0] and 'class="active"' %>>
-            <a href="#comments<% $ii %>" data-toggle="tab"><% _loc('Comments') %></a>
+            <a href="#comments<% $ii %>" data-toggle="tab"><% _loc('Discussion') %></a>
         </li>
         <li <% $tabactive[1] and 'class="active"' %>>
             <a href="#activity<% $ii %>" data-toggle="tab"><% _loc('Activity') %></a>
