html fieldlets with partials, list_topics created

--- a/root/fields/system/html/field_release.html
+++ b/root/fields/system/html/field_release.html
@@ -6,7 +6,10 @@
     <tr>
       <th><% _loc($meta->{id_field}) %>:</th>
       <td>
-        <span class="arrow_box" style="padding: 3px;cursor:pointer; background-color:<% $data->{$meta->{id_field}}->{color} || 'transparent' %>" onclick="javascript:Baseliner.show_topic(<% $data->{$meta->{id_field}}->{mid} %>, '<% $data->{$meta->{id_field}}->{title} %>')"><% $data->{$meta->{id_field}}->{title} || '&nbsp;' %></span>
+        <span class="arrow_box" style="padding: 3px;cursor:pointer; background-color:<% $data->{$meta->{id_field}}->{color} || 'transparent' %>" 
+                onclick="javascript:Baseliner.show_topic(<% $data->{$meta->{id_field}}->{mid} %>, '<% $data->{$meta->{id_field}}->{title} %>')">
+                <% $data->{$meta->{id_field}}->{title} || '&nbsp;' %>
+        </span>
       </td>
     </tr>
   
