--- a/root/fields/system/html/field_include_into.html
+++ b/root/fields/system/html/field_include_into.html
@@ -24,6 +24,7 @@
                                 )->hashref->all;
         @parents_topics = $c->model('Topic')->append_category( @parents_topics );
     }    
+
 </%perl>
 
 % if($is_release){
@@ -36,13 +37,7 @@
     <ul class="" style="margin-left: 20px">
 % foreach my $topic ( @parents_topics ) {
         <li style="margin: 6px 0px 6px 0px">
-            <span class="label" onclick="javascript:Baseliner.show_topic(<% $topic->{mid} %>, '<% $topic->{name} %>')" 
-            style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
-% my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
-            &nbsp;&nbsp;<b><% $topic->{title} %></b>&nbsp;&nbsp;
-% if($topic->{progress}){
-            <span class="badge badge-<%$cls%>" style="float:right;"><%$topic->{progress}%>%</span>
-%}
+            <& /partial/topic_name.html, topic=>$topic &>
         </li>
 % }
     </ul>
@@ -57,13 +52,7 @@
     <ul class="" style="margin-left: 20px">
 % foreach my $topic ( @parents_topics ) {
         <li style="margin: 6px 0px 6px 0px">
-            <span class="label" onclick="javascript:Baseliner.show_topic(<% $topic->{mid} %>, '<% $topic->{name} %>')" 
-            style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
-% my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
-            &nbsp;&nbsp;<b><% $topic->{title} %></b>&nbsp;&nbsp;
-% if($topic->{progress}){
-            <span class="badge badge-<%$cls%>" style="float:right;"><%$topic->{progress}%>%</span>
-%}
+            <& /partial/topic_name.html, topic=>$topic &>
         </li>
 % }
     </ul>
