--- a/root/site/top.html
+++ b/root/site/top.html
@@ -46,12 +46,12 @@
     <script>$('#bali-loading .progress .bar').width('20%');</script>
     
     <!-- ExtJS -->
-    <script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script>
     <!-- <link rel="stylesheet" href="/static/metal/metal.css" type="text/css" /> -->
     <link rel="stylesheet" type="text/css" href="/static/ext/resources/css/ext-all.css" />
 
     <script type="text/javascript" src="/site/stacktrace.js"></script>
     <script type="text/javascript" src="/static/ext/adapter/ext/ext-base<% $debug %>.js"></script>
+    <!-- script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script -->
 
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
