--- a/root/fields/system/html/field_status.html
+++ b/root/fields/system/html/field_status.html
@@ -6,8 +6,7 @@
 % if( defined $val && !$meta->{hidden} ) {
     <tr>
       <th><% _loc($meta->{name_field}) %>:</th>
-      <td 
-          class="fieldlet-html"
-          style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" ><% _loc( $val ) %></td>
+      <& /partial/topic_status.html, topic=>$data &>
     </tr>
 % }
+
