--- a/root/fields/system/html/field_title.html
+++ b/root/fields/system/html/field_title.html
@@ -17,12 +17,14 @@
     </tr>
     <tr>
         <td colspan='2'>
-            <h3><% eval('$data->{' . $meta->{bd_field} . '}') %></h3>
+            <h3><% $data->{ $meta->{bd_field} } %></h3>
         </td>    
     </tr>
     <tr >
         <td style="padding: 5 0 10 0; color: #999">
-            <img  width=16 src="/user/avatar/<% $data->{$meta->{display_field}} %>/image.png" />
+            <img  width=16 src="/user/avatar/<% $data->{modified_by} %>/image.png" />
+            <% $data->{modified_by}%>, <small><%$data->{modified_on}%></small> &nbsp; | &nbsp;            
+            <% lc _loc('Created')%>: <img  width=16 src="/user/avatar/<% $data->{created_by} %>/image.png" />
             <% $data->{created_by}%>, <small><%$data->{created_on}%></small>    
 % my $id = Baseliner::Utils::_nowstamp();
 % if( _array( $data->{labels} ) ) {        
