baseliner.require, graph.js with spacetree

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -97,6 +97,9 @@
 
     <!-- Editors: Ace, CLEditor, etc. -->
     <script type="text/javascript" src="/site/editors.js"></script>
+    
+    <!-- Graph libraries, Jit -->
+    <script type="text/javascript" src="/site/graph.js"></script>
 
     <script>$('#bali-loading .progress .bar').width('60%');</script>
     
