--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -198,9 +198,10 @@ padding: 2px 4px 2px 7px;
             </div>  <!-- comment tab -->
 
             <div class="tab-pane <% $tabactive[1] and 'active' %>" id="activity<% $ii %>">
-%  foreach ( _array( $events ) ) {
+%  foreach my $ev ( _array( $events ) ) {
                 <div style="margin-left: 20px">
-                    <p><img style="margin: 5px" width=16 src="/user/avatar/<% $_->{username} %>/image.png" /><% Baseliner::Utils::_to_utf8( $_->{text} ) %> <small><% $_->{ts} %></small></p>
+                    <p><img style="margin: 5px" width=16 src="/user/avatar/<% $ev->{username} %>/image.png" />
+                    <% Util->_to_utf8( $ev->{text} ) %> <small><% $ev->{ts} %></small></p>
                     <hr />
                 </div> 
 %}
