--- a/root/fields/system/html/field_title.html
+++ b/root/fields/system/html/field_title.html
@@ -2,6 +2,7 @@
     $meta
     $data
 </%args>
+% _log ">>>>>>>>>>>>>>>>>>>>>>>>>>DATA: " . _dump $data;
     <tr>
         <td style="vertical-align: middle">
             <span class="label" style="background: <% $data->{color_category} %>"><% _loc($data->{name_category}) %> #<% $data->{topic_mid} %></span>
@@ -21,8 +22,35 @@
 % if( _array( $data->{labels} ) ) {
 
 % foreach my $label ( _array( $data->{labels} ) ) {
-        <span class='label' style='font-size: 9px;padding:1px 4px 1px 4px;margin-right:4px;color:white;background-color:<% $label->{color} %>'><% $label->{name} %></span>
+        <!--<div class='alert' style='font-size: 9px;padding:1px 4px 1px 4px;margin-right:4px;color:white;background-color:<% $label->{color} %>'>-->
+        <span class='label' style='padding:1px 4px 1px 4px;background-color:<% $label->{color} %>'>
+            <% $label->{name} %>
+% if($data->{admin_labels}){        
+            <img id='<% $label->{id} %>' class='label_click' src='/static/images/icons/close.png' style='vertical-align: middle;'></img>
+%}
+        </span>
 % }
 % }
         </td>
     </tr>
+
+    <script>
+    $(".label_click").click(function() {
+        var topic_mid = '<%$data->{topic_mid}%>';
+        Baseliner.ajaxEval( '/topicadmin/delete_topic_label/' + topic_mid + '/' + this.id,{},
+            function(response) {
+                if ( response.success ) {
+                    $("#" + response.id).parent().hide();
+                    Baseliner.message( _('Success'), response.msg );
+                } else {
+                    Ext.Msg.show({
+                        title: _('Information'), 
+                        msg: response.msg , 
+                        buttons: Ext.Msg.OK, 
+                        icon: Ext.Msg.INFO
+                    });     
+                }
+            }
+        );
+    });
+    </script>
