--- a/root/fields/system/html/field_topics.html
+++ b/root/fields/system/html/field_topics.html
@@ -2,7 +2,6 @@
     $meta
     $data
 </%args>
-
 % if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
@@ -13,9 +12,9 @@
 % foreach my $topic ( _array( $data->{$meta->{id_field}} ) ) {
         <li style="margin: 6px 0px 6px 0px;">
 % my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );            
-% if($topic->{progress}){                            
-            <span class="badge badge-<%$cls%>" style="float:right;"><%$topic->{progress}%>%</span>
-%}            
+% #if($topic->{progress}){                            
+            <!--<span class="badge badge-<%$cls%>" style="float:right;"><%$topic->{progress}%>%</span>-->
+% #}            
             <& /partial/topic_name.html, topic=>$topic &>
 
         </li>
