--- a/root/fields/system/html/field_topics.html
+++ b/root/fields/system/html/field_topics.html
@@ -2,6 +2,11 @@
     $meta
     $data
 </%args>
+% _log ">>>>>>>>>>>>>>>>>>>>>>>>FIELD: " . $meta->{section};
+% if ($meta->{section} eq 'head'){
+<tr>
+<td>
+% }
 % if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
@@ -21,4 +26,8 @@
 % }
     </ul>
 
+% }
+% if ($meta->{section} eq 'head'){ 
+</td>
+</tr>
 % }
